--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "username": "jschang19",
   "name": "Jun Shawn",
   "userimg": "https://avatars.githubusercontent.com/u/62253076?v=4",
-  "sort": "created",
+  "sort": "updated",
   "order": "asc",
   "includeFork": true,
   "theme": "dark.css",
